# [package]
# name = "webgl_wasm"
# version = "0.1.0"
# edition = "2021"

[workspace]
members = [
    "common",
  "m0_demo",
    "m1_spline",
]
resolver = "2"

[workspace.dependencies]

wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
nalgebra-glm = "0.18.0"
console_error_panic_hook = { version = "0.1.7" }
web-sys = { version = "0.3.69", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
    "console",
] }
