[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
nalgebra-glm = { workspace = true }
console_error_panic_hook = { workspace = true }
web-sys = { workspace = true }
